RookHandler made standalone class, also LogMessages added to syncronize log output

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,8 @@ set(SRC_LIST
 
   ConcurrentQueue.h
   CommonTypes.h
-  FieldDrawer.h)
+  FieldDrawer.h
+  LogMessages.h)
 
 find_package(Threads REQUIRED)
 
